welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def quadrille() {
	avance
	baisseBrosse
	leveBrosse
} // quadrille
def gogogo(cases:Int) {
	for (nb <- 1 to cases)
	avance
} //avance de plusieures case
def oneFlower(c:Color) {
	setCouleurBrosse(Color.YELLOW)
	quadrille
	setCouleurBrosse(c)
	quadrille
	gauche
	for (nb <- 1 to 3) {
		avance
		gauche
		quadrille
	}
} //fais une fleur
def growCarre() {
	oneFlower(Color.RED)
	avance
	droite
	avance
	gauche
	oneFlower(Color.ORANGE)
	avance
	droite
	avance
	gauche
	oneFlower(Color.GREEN)
	gauche
	gogogo(5)
	gauche
	avance
	retourne
	oneFlower(Color.CYAN)
	droite
	gogogo(3)
	droite
	gogogo(5)
	retourne
	oneFlower(Color.PINK)
	recule
	gauche
	avance
	droite
} // fais un carré
def ligne() { 
	growCarre
	gogogo(6)
	gauche
	gogogo(2)
	droite
	oneFlower(Color.BLUE)
	avance
	gauche
	gogogo(3)
	droite
	growCarre
} //fais une ligne
growFlowers() {
	ligne

}
